Fix overflow problem on "resto card"

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -419,8 +419,9 @@ a {
   display: flex;
   flex-direction: column;
   margin: 3%;
-  max-width: 50%;
+  max-width: 80%;
   min-width: 0;
+  transition: 0.7s;
 }
 .menus__card--text h4 {
   font-size: 16px;
@@ -468,7 +469,7 @@ a {
 .menus__card:hover .menus__card--checkbox {
   margin-right: 0;
 }
-.menus__card:hover .menus__card--price {
+.menus__card:hover .menus__card--price, .menus__card .menus__card--text {
   margin-right: 16%;
 }
 .menus__card:hover .menus__card--checkbox i {
