--- a/sass/layout/_menus.scss
+++ b/sass/layout/_menus.scss
@@ -74,8 +74,9 @@
       display: flex;
       flex-direction: column;
       margin: 3%;
-      max-width: 50%;
+      max-width: 80%;
       min-width: 0;
+      transition: 0.7s;
       & h4{
         font-size: 16px;
         white-space: nowrap;
@@ -124,7 +125,7 @@
     &:hover &--checkbox{
       margin-right: 0;
     }
-    &:hover .menus__card--price{
+    &:hover .menus__card--price, .menus__card--text{
       margin-right: 16%;
     }
     &:hover &--checkbox i{
